==============================================================================
TradeDangerous, Copyright (C) Oliver "kfsone" Smith, July 2014
==============================================================================

May ## 2017 (bgol, horizon branch):
. Don't change the planetary state if updating via the station command
  without specifying it.
. Updated EDAPI plugin to version 4.1.1

May 22 2017 (bgol, horizon branch):
. Updated buy, rares, run and trade command to also output the
  category name of the item if more details are requested.
. Data update from maddavo.

May 21 2017 (bgol, horizon branch):
. Updated some ship prices.
. New import plugin "Journal" which parses the Journal-files and add new
  systems and stations to the database (see README for description).

May 13 2017 (bgol, horizon branch):
. Updated EDAPI plugin to version 4.1.0
  - Shipyard handling reworked.
. Updated RareItem based on Capitan Ace Rimmer (http://www.hozbase.co.uk/elitedangerous)
. Data update from my netLog.

May 12 2017 (bgol, horizon branch):
. Updated the "netLog" plugin to accept new log format (>= 2.3)
. Added Dolphin (ship)
. Data update from maddavo.

Feb 17 2017 (bgol, horizon branch):
. Data update from maddavo.
. Updated EDAPI plugin to version 4.0.0
  - Login process reworked.
. Updated EDAPI plugin to version 4.0.1
  - 4.0.0 broke the save option.

Oct 26 2016 (bgol, horizon branch):
. New ship "Beluga Liner".
. Data update from maddavo.
. Even with zero demandunits the station does pay the price.

Oct 14 2016 (bgol, horizon branch):
. Data update from maddavo.
. Updated EDAPI plugin to version 3.7.5:
  - Updated shipyard to EDDN v2 schema.
  - Updated outfitting to EDDN v2 schema.
  - Updated commodity to EDDN v3 schema.

Jul 08 2016 (bgol, horizon branch):
. Updated EDAPI plugin to version 3.7.4:
  - Let the user know about the API response.
  - New option "test=[FILENAME]" to test the plugin.