@@ -6,6 +6,7 @@ May ## 2017 (bgol, horizon branch):
 . Don't change the planetary state if updating via the station command
   without specifying it.
 . Updated EDAPI plugin to version 4.1.1
+. Updated Journal plugin to recognise the "Location" event.
 
 May 22 2017 (bgol, horizon branch):
 . Updated buy, rares, run and trade command to also output the
